src/objects/hed__Program_Enrollment__c.object
<CustomObject>
    <description>Contains details about the relationship a student Contact has with a Department or School (the degree-granting Account type for the educational institution).</description>
    <fields>
        <fullName>Academic_Standing__c</fullName>
        <description>Field from Banner to indicate academic standing; SGASTDN</description>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Academic Standing</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field from Banner to indicate if active student; SGASTDN</description>
        <inlineHelpText>Checked if this student has an Active record in Banner</inlineHelpText>
        <label>Active Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admit_Type__c</fullName>
        <description>Field from Banner to indicate admit type; SGASTDN</description>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Admit Type</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Credits__c</fullName>
        <description>Field from Banner to indicate audit credits; SHRLGPA</description>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Audit Credits</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <description>Field from Banner to indicate campus code; SGASTDN</description>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Campus</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catalog_Term__c</fullName>
        <description>Field from Banner;</description>
        <inlineHelpText>from Banner</inlineHelpText>
        <label>Catalog Term</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <description>Field from Banner to indicate cohort; SGASADD</description>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Cohort</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marked if this is the students current program</description>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Current Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currently_Enrolled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field from Banner to indicate whether student is currently enrolled; SFRSTCR</description>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Currently Enrolled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Displays name of Program Division</description>
        <formula>hed__Account__r.Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Graduation_Date__c</fullName>
        <description>Field from Banner to indicate expected student grad date; SGASTDN</description>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Expected Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Advisors__c</fullName>
        <description>Field from Banner to indicate other advisors; SGADDVR</description>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Other Advisors</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Term_GPA__c</fullName>
        <description>Field from Banner to indicate previous term gpa; SHRLGPA</description>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Previous Term GPA</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Advisor__c</fullName>
        <description>Field from Banner to indicate primary advisor; SGADDVR</description>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Primary Advisor</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field from Banner to indicate which Program Enrollment is a student&apos;s primary Program</description>
        <inlineHelpText>from Banner; marks this as a student&apos;s primary Program</inlineHelpText>
        <label>Primary Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Priority__c</fullName>
        <description>Field from Banner;</description>
        <inlineHelpText>from Banner, indicates Program Enrollment order if student has multiple</inlineHelpText>
        <label>Program Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registered_Credits__c</fullName>
        <description>Field from Banner to indicate registered credits; SFRSTCR</description>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Registered Credits</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Indicator__c</fullName>
        <description>Not in banner. This comes from a view.</description>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Risk Indicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Attributes__c</fullName>
        <description>Field from Banner to indicate student atributes; SGASTDN</description>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Student Attributes</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transfer_Credits__c</fullName>
        <description>Field from Banner to indicate cumulative credits; SHRLGPA</description>
        <inlineHelpText>From Banner</inlineHelpText>
        <label>Transfer Credits</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program the student is enrolled in.</description>
        <inlineHelpText>The program the student is enrolled in.</inlineHelpText>
        <label>Program</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Admission_Date__c</fullName>
        <label>Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Affiliation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Contact-Account relationship this academic information is related to.</description>
        <inlineHelpText>The Contact-Account relationship this academic information is related to.</inlineHelpText>
        <label>Affiliation</label>
        <referenceTo>hed__Affiliation__c</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Application_Submitted_Date__c</fullName>
        <label>Application Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Class_Standing__c</fullName>
        <label>Class Standing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Freshman</fullName>
                </value>
                <value>
                    <fullName>Sophomore</fullName>
                </value>
                <value>
                    <fullName>Junior</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Contact.</description>
        <inlineHelpText>The parent Contact.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Credits_Attempted__c</fullName>
        <label>Credits Attempted</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Credits_Earned__c</fullName>
        <label>Credits Earned</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Eligible_to_Enroll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible to Enroll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Enrollment_Status__c</fullName>
        <label>Enrollment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full-time</fullName>
                </value>
                <value>
                    <fullName>Half-time</fullName>
                </value>
                <value>
                    <fullName>Less than half-time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__GPA__c</fullName>
        <label>GPA</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Graduation_Year__c</fullName>
        <description>The expected graduation year from the program.</description>
        <label>Class Year</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Program_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Program Plan encompassing all Program Requirements that a student should follow for this Program Enrollment.</description>
        <inlineHelpText>Click to select a Program Plan that a student should follow for this Program Enrollment.</inlineHelpText>
        <label>Program Plan</label>
        <referenceTo>hed__Program_Plan__c</referenceTo>
        <relationshipLabel>Program Enrollments</relationshipLabel>
        <relationshipName>Program_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Program Enrollment</label>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Program Enrollment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>